# getmehired

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: groq_example.py  huggingface_example.py  openai_example.py
scripts/: find_recruiters.py  run.py  send_emails.py  test_scraper.py
src/: __init__.py
src/agents/: base_agent.py
src/config/: settings.py
src/crews/: __init__.py  base_crew.py
src/getmehired/: config.py
src/getmehired/agents/: email_drafter.py  job_analyzer.py
src/getmehired/models/: job.py  recruiter.py
src/getmehired/services/: email_finder.py  gmail_sender.py  job_scraper.py  recruiter_finder.py  resume_reader.py  storage.py
src/models/: data_models.py
src/tasks/: base_task.py
src/utils/: logger.py
