[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmehired"
version = "0.1.0"
description = "AI-powered end-to-end job outreach pipeline"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
getmehired = "getmehired.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/getmehired"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
